--- a/fld.csproj
+++ b/fld.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Version>1.0.0</Version>
+        <Version>1.1.0</Version>
         <Authors>Adamos Fiakkas</Authors>
+        <Description>FIX Logs Decoder</Description>
     </PropertyGroup>
 
     <ItemGroup>
