--- a/fld/fld.csproj
+++ b/fld/fld.csproj
@@ -1,21 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net10.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Version>1.1.0</Version>
-        <Authors>Adamos Fiakkas</Authors>
-        <Description>FIX Logs Decoder</Description>
-    </PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net10.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.1.0</Version>
+    <Authors>Adamos Fiakkas</Authors>
+    <Description>FIX Logs Decoder</Description>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="CommandLineParser" Version="2.9.1"/>
-        <PackageReference Include="OneOf" Version="3.0.271"/>
-        <PackageReference Include="QuickFIXn.Core" Version="1.14.0"/>
-        <PackageReference Include="QuickFIXn.FIX42" Version="1.14.0"/>
-        <PackageReference Include="QuickFIXn.FIX44" Version="1.14.0"/>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1"/>
+    <PackageReference Include="OneOf" Version="3.0.271"/>
+    <PackageReference Include="QuickFIXn.Core" Version="1.14.0"/>
+    <PackageReference Include="QuickFIXn.FIX42" Version="1.14.0"/>
+    <PackageReference Include="QuickFIXn.FIX44" Version="1.14.0"/>
+  </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="fld.Tests"/>
+  </ItemGroup>
 </Project>
