--- a/fld/fld.csproj
+++ b/fld/fld.csproj
@@ -8,6 +8,7 @@
     <Version>1.1.0</Version>
     <Authors>Adamos Fiakkas</Authors>
     <Description>FIX Logs Decoder</Description>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
