--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true
+      run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true /p:ExcludeByFile="**/Program.cs"
